# MilkBarLauncher-Linux-Port

./: .gitignore  MilkBarLauncher-CLI.csproj  MilkBarLauncher-CLI.sln  Program.cs  README.md
Backend/AppdataFiles/: WeaponDamages.txt
Backend/MVVM/Model/DTO/: serverDataDTO.cs
Backend/Source files/: Injector.cs  NamedPipes.cs
InjectDLL/: CMakeLists.txt
InjectDLL/src/: Actor.h  ActorData.h  BigEndian.h  BombAccess.h  BombDTO.h  BombSyncer.cpp  BotwEdit.h  BumiiAccess.h  BumiiData.h  CharacterClasses.cpp  CharacterDTO.h  CharacterEquipment.h  CharacterLocation.h  Client.cpp  ClientDTO.h  Connectivity.h  DeathSwapDTO.h  Deserializer.cpp  Enemy.h  EnemyAccess.h  EnemyDTO.h  EnemyData.h  Entities.h  EquipmentAccess.h  EquippedItems.h  Extrapolation.h  Game.h  InjectDLL.sln  InjectDLL.vcxproj  InjectDLL.vcxproj.filters  InterpolationFunctions.cpp  Interpretation.cpp  KeyCodeActor.h  LittleEndian.h  LocalInstance.h  LocationAccess.h  LoggerService.cpp  LoggerService.h  Memory.h  MessagerService.cpp  (+35 more)
Resources/: NpcData.json
